--- a/ui/src/main/res/layout/fragment_change_password.xml
+++ b/ui/src/main/res/layout/fragment_change_password.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorBlack"
-    tools:context="kg.nurtelecom.ofd.ui.fragments.ChangePasswordFragment">
+    android:background="@color/colorBlack">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/main_toolbar"
