--- a/ui/src/main/res/values/dimens.xml
+++ b/ui/src/main/res/values/dimens.xml
@@ -21,6 +21,8 @@
     <dimen name="text_20sp">20sp</dimen>
     <dimen name="text_19sp">19sp</dimen>
     <dimen name="text_14sp">14sp</dimen>
+    <dimen name="text_40sp">40sp</dimen>
+    <dimen name="text_16sp">16sp</dimen>
 
     <dimen name="margin_16dp">16dp</dimen>
     <dimen name="margin_14dp">14dp</dimen>
