--- a/sell/src/main/res/layout/card_view.xml
+++ b/sell/src/main/res/layout/card_view.xml
@@ -6,20 +6,22 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-<!--    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/card_view"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardCornerRadius="4dp"
-        app:cardElevation="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">-->
+        android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/develete_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/delete"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/card_content"
+            app:layout_constraintEnd_toStartOf="@id/card_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/card_title" />
 
             <ImageView
                 android:id="@+id/develete_iv"
@@ -34,59 +36,45 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/card_title" />
 
-            <TextView
-                android:id="@+id/card_title"
-                android:layout_width="0dp"
-                android:layout_height="22dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:gravity="center_vertical"
-                android:text="Card Title"
-                android:textColor="@android:color/white"
-                android:textSize="16sp"
-                app:layout_constraintStart_toEndOf="@id/develete_iv"
-                app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/card_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="Content"
+            android:textColor="@android:color/white"
+            android:textSize="40sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/develete_iv"
+            app:layout_constraintTop_toBottomOf="@id/card_title" />
 
-            <TextView
-                android:id="@+id/card_content"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:text="Content"
-                android:textColor="@android:color/white"
-                android:textSize="40sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/develete_iv"
-                app:layout_constraintTop_toBottomOf="@id/card_title" />
+        <TextView
+            android:id="@+id/tax_sum_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:textColor="@android:color/white"
+            app:layout_constraintBottom_toBottomOf="@id/card_content"
+            app:layout_constraintEnd_toStartOf="@id/navigate_icon"
+            app:layout_constraintTop_toTopOf="@id/card_content"
+            tools:text="500 c" />
 
-            <TextView
-                android:id="@+id/tax_sum_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:textColor="@android:color/white"
-                app:layout_constraintBottom_toBottomOf="@id/card_content"
-                app:layout_constraintEnd_toStartOf="@id/navigate_icon"
-                app:layout_constraintTop_toTopOf="@id/card_content"
-                tools:text="500 c" />
+        <ImageView
+            android:id="@+id/navigate_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:visibility="gone"
+            android:src="@drawable/arrow_right"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/navigate_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:visibility="gone"
-                android:src="@drawable/arrow_right"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+</com.google.android.material.card.MaterialCardView>
 
-    </com.google.android.material.card.MaterialCardView>
-
-<!--</com.google.android.material.card.MaterialCardView>-->
 
 
