--- a/sell/src/main/res/layout/dialog_view.xml
+++ b/sell/src/main/res/layout/dialog_view.xml
@@ -1,47 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@drawable/dialog_background">
 
     <TextView
         android:id="@+id/regime_tv"
+        style="@style/SellModeDialogTitleFiscal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="24dp"
         android:layout_marginTop="21dp"
-        android:text="@string/fiscal_regime"
-        android:textSize="20sp"
-        android:textColor="#DE000000"/>
+        android:textColor="#DE000000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/regime_message"
+        style="@style/SellModeDialogContentFiscal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
         android:layout_marginTop="12dp"
-        android:textSize="16sp"
-        android:textColor="#8A000000"
-        android:text="@string/fiscal_regime_content"
+        android:layout_marginEnd="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/regime_tv" />
 
     <TextView
         android:id="@+id/regime_ok_button"
+        style="@style/SellModeDialogButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/regime_message"
-        android:text="@android:string/ok"
-        android:textColor="#009688"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="36dp"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/regime_message" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
