--- a/sell/src/main/res/layout/product_list_item.xml
+++ b/sell/src/main/res/layout/product_list_item.xml
@@ -1,52 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@android:color/black"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@android:color/black">
 
     <ImageView
         android:id="@+id/remove_product_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="16dp"
-        android:src="@drawable/abc_vector_test" />
+        android:clickable="true"
+        android:focusable="true"
+        android:src="@drawable/delete"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/product_position_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Позиция №"
-        app:layout_constraintStart_toEndOf="@id/remove_product_iv"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@android:color/white"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:layout_marginStart="16dp" />
+        android:text="Позиция №"
+        android:textColor="@android:color/white"
+        app:layout_constraintStart_toEndOf="@id/remove_product_iv"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/product_count_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/product_position_tv"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
+        android:textColor="@android:color/white"
         android:textSize="16sp"
-        tools:text="100 * 2"
-        android:textColor="@android:color/white" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@id/product_position_tv"
+        tools:text="100 * 2" />
 
     <TextView
         android:id="@+id/product_sum_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="200"
-        android:textColor="@android:color/white"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp" />
+        tools:text="200" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
