--- a/sell/src/main/res/values/styles.xml
+++ b/sell/src/main/res/values/styles.xml
@@ -1,6 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="SellModeDialogTitle">
+        <item name="android:textSize">@dimen/text_20sp</item>
+        <item name="android:textColor">#DE000000</item>
+    </style>
+
+    <style name="SellModeDialogContent">
+        <item name="android:textSize">@dimen/text_16sp</item>
+        <item name="android:textColor">#8A000000</item>
+    </style>
+
+    <style name="SellModeDialogTitleFiscal" parent="SellModeDialogTitle">
+        <item name="android:text">@string/fiscal_regime_title</item>
+    </style>
+
+    <style name="SellModeDialogTitleNonFiscal" parent="SellModeDialogTitle">
+        <item name="android:text">@string/non_fiscal_regime_title</item>
+    </style>
+
+    <style name="SellModeDialogContentFiscal" parent="SellModeDialogContent">
+        <item name="android:text">@string/fiscal_regime_content</item>
+    </style>
+
+    <style name="SellModeDialogContentNonFiscal" parent="SellModeDialogContent">
+        <item name="android:text">@string/non_fiscal_regime_content</item>
+    </style>
+
+    <style name="SellModeDialogButton">
+        <item name="android:text">@android:string/ok</item>
+        <item name="android:textSize">@dimen/text_14sp</item>
+        <item name="android:textColor">#009688</item>
+    </style>
+
     <style name="SellButton">
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">@dimen/text_14sp</item>
