--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
             android:layout_marginEnd="-65dp"
             android:background="@color/black"
             android:fitsSystemWindows="true"
-            app:headerLayout="@layout/side_menu_main"
+            app:headerLayout="@layout/side_menu_sell_main"
             app:itemIconTint="#fff" />
     </androidx.drawerlayout.widget.DrawerLayout>
 
