add navigation to payment method fragment, close task #12.04

--- a/sell/src/main/res/layout/activity_sell_main.xml
+++ b/sell/src/main/res/layout/activity_sell_main.xml
@@ -28,7 +28,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tb_sell_main"
         tools:openDrawer="end">
 
-        <FrameLayout
+        <androidx.fragment.app.FragmentContainerView
             android:id="@+id/sellMainContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
