--- a/sell/src/main/res/values/styles.xml
+++ b/sell/src/main/res/values/styles.xml
@@ -31,5 +31,21 @@
         <item name="hintTextColor">@color/sell_allowance</item>
     </style>
 
+    <style name="green_btn">
+        <item name="android:background">@drawable/bg_btn_green</item>
+        <item name="android:textSize">@dimen/text_14sp</item>
+        <item name="android:textColor">@color/colorWhite</item>
+<!--        <item name="font">@font/roboto_medium</item>-->
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="orange_btn">
+        <item name="android:background">@drawable/bg_btn_orange</item>
+        <item name="android:textSize">@dimen/text_14sp</item>
+        <item name="android:textColor">@color/colorWhite</item>
+<!--        <item name="font">@font/roboto_medium</item>-->
+        <item name="android:textAllCaps">false</item>
+    </style>
+
     <dimen name="text_14sp">14sp</dimen>
 </resources>
