--- a/sell/src/main/res/layout/side_menu_sell_main.xml
+++ b/sell/src/main/res/layout/side_menu_sell_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginRight="@dimen/margin_16dp"
         android:textColor="#8E8E93"
         android:textSize="@dimen/text_14sp"
-        android:text="Открытие смены:"
+        android:text="@string/text_shift_opening"
         />
     <TextView
         android:layout_width="match_parent"
@@ -35,25 +35,69 @@
         android:layout_marginTop="@dimen/margin_16dp"
         android:layout_marginRight="@dimen/margin_16dp"
         style="@style/green_btn"
-        android:text="Продажа" />
+        android:text="@string/text_sale" />
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_return"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_16dp"
         android:layout_marginRight="@dimen/margin_16dp"
         style="@style/orange_btn"
-        android:text="Возврат" />
-    <kg.nurtelecom.ofd.ui.buttons.ButtonSingleView
-        android:id="@+id/main_sell_menu_item_app_info"
+        android:text="@string/text_return" />
+
+    <kg.nurtelecom.ofd.ui.CellView
+        android:id="@+id/sell_main_menu_item_greeting"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_16dp"
         android:layout_marginRight="@dimen/margin_16dp"
-        app:title="Ttikt"
-        />
+        app:title="@string/main_greeting"
+        app:showSubTitle="false"
+        app:showArrowIcon="true"
+        app:position="single"/>
+    <kg.nurtelecom.ofd.ui.CellView
+        android:id="@+id/sell_main_menu_item_report"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_16dp"
+        android:layout_marginTop="@dimen/margin_8dp"
+        android:layout_marginRight="@dimen/margin_16dp"
+        app:title="@string/text_report"
+        app:subTitle="@string/text_interim_report"
+        app:position="top"/>
+    <kg.nurtelecom.ofd.ui.CellView
+        android:id="@+id/sell_main_menu_item_story"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_16dp"
+        android:layout_marginRight="@dimen/margin_16dp"
+        app:title="@string/text_story"
+        app:subTitle="@string/text_story_list"
+        app:position="bottom"/>
+    <kg.nurtelecom.ofd.ui.CellView
+        android:id="@+id/sell_main_menu_item_information"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_16dp"
+        android:layout_marginTop="@dimen/margin_8dp"
+        android:layout_marginRight="@dimen/margin_16dp"
+        app:title="@string/text_information"
+        app:showSubTitle="false"
+        app:showArrowIcon="true"
+        app:position="single"/>
+    <kg.nurtelecom.ofd.ui.CellView
+        android:id="@+id/sell_main_menu_item_operations"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_16dp"
+        android:layout_marginRight="@dimen/margin_16dp"
+        android:layout_marginTop="@dimen/margin_8dp"
+        app:title="@string/text_operations"
+        app:subTitle="@string/text_operations_list"
+        app:position="bottom"/>
+
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_close"
@@ -65,7 +109,7 @@
         android:background="@null"
         android:textColor="#FF3B30"
         android:textSize="@dimen/text_14sp"
-        android:text="Закрытие смены и z-отчет" />
+        android:text="@string/text_shift_closing" />
 
 
 </LinearLayout>
