fixed issue with showing toolbar in activity

--- a/sell/src/main/res/layout/activity_sell_main.xml
+++ b/sell/src/main/res/layout/activity_sell_main.xml
@@ -29,7 +29,7 @@
         tools:openDrawer="end">
 
         <FrameLayout
-            android:id="@+id/mainContainer"
+            android:id="@+id/sellMainContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
