--- a/sell/src/main/res/values/styles.xml
+++ b/sell/src/main/res/values/styles.xml
@@ -32,31 +32,14 @@
     </style>
 
 <!--    Payment method-->
-    <style name="normal_size_text">
+    <style name="style_normal_white_text" >
         <item name="android:textSize">@dimen/app_text_normal</item>
-    </style>
-
-    <style name="normal_size_black_text" parent="normal_size_text">
-        <item name="android:textColor">@color/colorBlack</item>
-    </style>
-
-    <style name="normal_size_white_text" parent="normal_size_text">
         <item name="android:textColor">@color/colorWhite</item>
     </style>
 
-    <style name="btn_core" parent="normal_size_text">
-        <item name="android:insetTop">0dp</item>
-        <item name="android:insetBottom">0dp</item>
-    </style>
-
-    <style name="btn_green" parent="btn_core" >
-        <item name="android:textColor">@color/colorWhite</item>
-        <item name="android:backgroundTint">@color/colorGreen</item>
-    </style>
-
-    <style name="btn_white" parent="btn_core">
+    <style name="style_normal_black_text" >
+        <item name="android:textSize">@dimen/app_text_normal</item>
         <item name="android:textColor">@color/colorBlack</item>
-        <item name="android:backgroundTint">@color/colorWhite</item>
     </style>
 
     <style name="style_tw_payment_amount" >
