--- a/user/src/main/res/layout/activity_user.xml
+++ b/user/src/main/res/layout/activity_user.xml
@@ -131,6 +131,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="ИНН"
+                android:inputType="number"
+                android:maxLength="14"
                 android:background="@null"
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_20sp"
