--- a/ui/src/main/res/layout/view_card.xml
+++ b/ui/src/main/res/layout/view_card.xml
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:contentDescription="@string/next_icon_description"
             android:src="@drawable/next_icon"
-            android:visibility="visible"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
