--- a/sell/src/main/res/layout/side_menu_sell_main.xml
+++ b/sell/src/main/res/layout/side_menu_sell_main.xml
@@ -13,7 +13,7 @@
         android:layout_marginLeft="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_8dp"
         android:layout_marginRight="@dimen/margin_16dp"
-        android:textColor="#8E8E93"
+        android:textColor="@color/colorGrey"
         android:textSize="@dimen/text_14sp"
         android:text="@string/text_shift_opening"
         />
@@ -23,27 +23,27 @@
         android:layout_marginLeft="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_2dp"
         android:layout_marginRight="@dimen/margin_16dp"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/colorWhite"
         android:textSize="@dimen/text_20sp"
         android:text="27.06.20 / 08:45 "
         />
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_sale"
+        android:id="@+id/sell_main_menu_item_sale"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_16dp"
         android:layout_marginRight="@dimen/margin_16dp"
-        style="@style/green_btn"
+        style="@style/SellGreenButton"
         android:text="@string/text_sale" />
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_return"
+        android:id="@+id/sell_main_menu_item_return"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_16dp"
         android:layout_marginRight="@dimen/margin_16dp"
-        style="@style/orange_btn"
+        style="@style/SellOrangeButton"
         android:text="@string/text_return" />
 
     <kg.nurtelecom.ofd.ui.CellView
@@ -103,16 +103,16 @@
 
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_close"
+        android:id="@+id/sell_main_menu_item_close"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_25dp"
         android:layout_marginRight="@dimen/margin_16dp"
         android:background="@null"
-        android:textColor="#FF3B30"
+        android:textColor="@color/colorRed"
         android:textSize="@dimen/text_14sp"
-        android:text="@string/text_shift_closing" />
+        android:text="@string/text_shift_closing_and_report" />
 
 
 </LinearLayout>
