--- a/app/src/main/res/layout/fragment_greeting.xml
+++ b/app/src/main/res/layout/fragment_greeting.xml
@@ -7,35 +7,50 @@
     android:background="@color/colorBlack"
     android:padding="8dp">
 
-    <kg.nurtelecom.ofd.ui.CellView
+    <androidx.cardview.widget.CardView
+        android:id="@+id/first_selection"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="@dimen/radius_5dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:id="@+id/cell_fiscal_mode"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:title="@string/text_fiscal_mode"
-        app:subTitle="@string/text_for_activity"
-        app:position="top"/>
-    <kg.nurtelecom.ofd.ui.CellView
-        app:layout_constraintTop_toBottomOf="@id/cell_fiscal_mode"
-        app:layout_constraintStart_toStartOf="parent"
-        android:id="@+id/cell_profile"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:title="@string/text_merchant_profile"
-        app:subTitle="@string/text_contact_info"
-        app:position="bottom"/>
+        app:layout_constraintStart_toStartOf="parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <kg.nurtelecom.ofd.ui.CellView
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:id="@+id/cell_fiscal_mode"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:title="@string/text_fiscal_mode"
+                app:subTitle="@string/text_for_activity" />
+            <kg.nurtelecom.ofd.ui.CellView
+                app:layout_constraintTop_toBottomOf="@id/cell_fiscal_mode"
+                app:layout_constraintStart_toStartOf="parent"
+                android:id="@+id/cell_profile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:title="@string/text_merchant_profile"
+                app:subTitle="@string/text_contact_info"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
-    <kg.nurtelecom.ofd.ui.CellView
+    <androidx.cardview.widget.CardView
         android:layout_marginTop="@dimen/margin_8dp"
-        app:layout_constraintTop_toBottomOf="@id/cell_profile"
-        app:layout_constraintStart_toStartOf="parent"
-        android:id="@+id/cell_change_password"
+        app:cardCornerRadius="@dimen/radius_5dp"
+        android:id="@+id/second_selection"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:title="@string/text_change_password"
-        app:showSubTitle="false"
-        app:position="single"/>
+        app:layout_constraintTop_toBottomOf="@id/first_selection"
+        app:layout_constraintStart_toStartOf="parent">
+        <kg.nurtelecom.ofd.ui.CellView
+            android:id="@+id/cell_change_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:title="@string/text_change_password"
+            app:showSubTitle="false" />
+    </androidx.cardview.widget.CardView>
 
     <ImageView
         android:id="@+id/logo_main"
@@ -45,7 +60,7 @@
         android:src="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cell_change_password" />
+        app:layout_constraintTop_toBottomOf="@id/second_selection" />
 
     <TextView
         android:id="@+id/app_name"
