--- a/ui/src/main/res/layout/cell_view.xml
+++ b/ui/src/main/res/layout/cell_view.xml
@@ -1,53 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="75dp"
-    android:gravity="center_vertical"
-    android:padding="@dimen/padding_8dp"
-    android:clickable="true"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
-    android:id="@+id/root_layout">
+    android:id="@+id/root_layout"
+    style="@style/CellViewStyle">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/title"
+        style="@style/ItemCellTitleTextStyle"
+        android:text="Title"
+        app:layout_constraintBottom_toTopOf="@id/subTitle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/subTitle"
+        style="@style/CellSubTitleTextStyle"
+        android:text="Sub Title"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center_vertical"
-        android:id="@+id/ll_titles">
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Title"
-            android:textColor="@color/colorLightGrey"
-            android:fontFamily="@font/roboto"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/subTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/title"
-            android:layout_marginTop="@dimen/margin_5dp"
-            android:text="Sub Title"
-            android:fontFamily="roboto"
-            android:textColor="@color/colorGrey"
-            android:textSize="14sp" />
-
-    </LinearLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title" />
 
     <ImageView
-        android:id="@+id/icon"
+        android:id="@+id/cellViewIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
