--- a/ui/src/main/res/values/styles.xml
+++ b/ui/src/main/res/values/styles.xml
@@ -192,8 +192,12 @@
 
     <style name="CellViewStyle">
         <item name="android:gravity">center_vertical</item>
+        <item name="android:padding">@dimen/padding_8dp</item>
         <item name="android:focusable">true</item>
         <item name="android:clickable">true</item>
+        <item name="android:background">@color/darkGrey</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/height_75dp</item>
     </style>
 
 
