--- a/ui/src/main/res/values/dimens.xml
+++ b/ui/src/main/res/values/dimens.xml
@@ -33,10 +33,14 @@
     <dimen name="text_40sp">40sp</dimen>
     <dimen name="text_16sp">16sp</dimen>
 
+    <dimen name="margin_36dp">36dp</dimen>
+    <dimen name="margin_32dp">32dp</dimen>
     <dimen name="margin_16dp">16dp</dimen>
     <dimen name="margin_14dp">14dp</dimen>
+    <dimen name="margin_12dp">12dp</dimen>
     <dimen name="margin_8dp">8dp</dimen>
     <dimen name="margin_5dp">5dp</dimen>
+    <dimen name="margin_4dp">4dp</dimen>
     <dimen name="margin_0dp">0dp</dimen>
 
     <dimen name="padding_16dp">16dp</dimen>
