Finished custom view for sale

--- a/ui/src/main/res/values/styles.xml
+++ b/ui/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+<!--    @deprecated use GreenInfoCardCellTitleTextStyle instead-->
     <style name="style_card_view">
         <item name="android:letterSpacing">-0.04</item>
         <item name="android:textColor">#FFFFFF</item>
@@ -96,13 +96,7 @@
     </style>
 
 
-
-
-
-
-
-
-<!--    new styles -->
+    <!--    new styles -->
     <style name="BaseTextAppearance" parent="TextAppearance.AppCompat">
         <item name="android:textSize">@dimen/text_16sp</item>
         <item name="android:textStyle">normal</item>
@@ -201,7 +195,6 @@
         <item name="android:focusable">true</item>
         <item name="android:clickable">true</item>
     </style>
-
 
 
     <style name="BaseButtonStyle" parent="Widget.MaterialComponents.Button">
