Finished Fragments by cash and by card

--- a/sell/src/main/res/layout/fragment_payment_by_card.xml
+++ b/sell/src/main/res/layout/fragment_payment_by_card.xml
@@ -8,7 +8,7 @@
     android:padding="@dimen/padding_16dp"
     tools:context=".ui.fragment.payment_method.PaymentByCardFragment">
 
-    <kg.nurtelecom.ofd.sell.CustomCardView
+    <kg.nurtelecom.ofd.sell.CardViewSell
         android:id="@+id/cw_sum_card"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <kg.nurtelecom.ofd.sell.CustomCardView
+    <kg.nurtelecom.ofd.sell.CardViewSell
         android:id="@+id/et_received_card"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -27,6 +27,7 @@
 
     <Button
         android:id="@+id/btn_continue_card"
+        style="@style/btn_green"
         android:layout_width="0dp"
         android:layout_height="44dp"
         android:text="@string/btn_continue"
