--- a/ui/src/main/res/values/styles.xml
+++ b/ui/src/main/res/values/styles.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--    @deprecated use GreenInfoCardCellTitleTextStyle instead-->
+    <style name="style_card_view">
+        <item name="android:letterSpacing">-0.04</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
 
     <style name="BaseTextAppearance" parent="TextAppearance.AppCompat">
         <item name="android:textSize">@dimen/text_16sp</item>
