--- a/sell/src/main/res/layout/dialog_view.xml
+++ b/sell/src/main/res/layout/dialog_view.xml
@@ -8,7 +8,6 @@
 
     <TextView
         android:id="@+id/regime_tv"
-        style="@style/SellModeDialogTitleFiscal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -19,8 +18,8 @@
 
     <TextView
         android:id="@+id/regime_message"
-        style="@style/SellModeDialogContentFiscal"
         android:layout_width="0dp"
+        android:text="Это основной режим осуществления торговой деятельности. Все данные отправляются в ОФД."
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="12dp"
@@ -31,9 +30,10 @@
 
     <TextView
         android:id="@+id/regime_ok_button"
-        style="@style/SellModeDialogButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@android:string/ok"
+        android:textColor="#009688"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="36dp"
         android:layout_marginBottom="16dp"
