--- a/sell/src/main/res/layout/sell_fragment.xml
+++ b/sell/src/main/res/layout/sell_fragment.xml
@@ -68,8 +68,7 @@
             android:id="@+id/add_product_button"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            style="@style/SellBlackButton"
-            android:text="@string/add_product"
+            android:text="Новый продукт"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
