--- a/sell/src/main/res/layout/price_output_fragment.xml
+++ b/sell/src/main/res/layout/price_output_fragment.xml
@@ -17,23 +17,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <kg.nurtelecom.ofd.sell.CustomCardEditText
-        android:id="@+id/price_edit_text"
+    <kg.nurtelecom.ofd.sell.InfoCardCellView
+        android:id="@+id/product_price_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/position_tv"
         app:layout_constraintTop_toBottomOf="@id/position_tv" />
 
-
-    <kg.nurtelecom.ofd.sell.CustomCardEditText
-        android:id="@+id/count_edit_text"
+    <kg.nurtelecom.ofd.sell.InfoCardCellView
+        android:id="@+id/product_count_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="@id/price_edit_text"
-        app:layout_constraintStart_toStartOf="@id/price_edit_text"
-        app:layout_constraintTop_toBottomOf="@id/price_edit_text" />
+        app:layout_constraintEnd_toEndOf="@id/product_price_et"
+        app:layout_constraintStart_toStartOf="@id/product_price_et"
+        app:layout_constraintTop_toBottomOf="@id/product_price_et" />
 
     <LinearLayout
         android:id="@+id/group_buttons"
@@ -43,26 +42,26 @@
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/count_edit_text">
+        app:layout_constraintTop_toBottomOf="@id/product_count_et">
 
-        <kg.nurtelecom.ofd.sell.CustomCardEditText
-            android:id="@+id/skidka_edit_text"
+        <kg.nurtelecom.ofd.sell.InfoCardCellView
+            android:id="@+id/product_discount_et"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:layout_weight="1"
-            app:layout_constraintEnd_toStartOf="@+id/skidka_edit_text"
-            app:layout_constraintStart_toStartOf="@id/count_edit_text"
-            app:layout_constraintTop_toBottomOf="@id/count_edit_text" />
+            app:layout_constraintEnd_toStartOf="@+id/product_discount_et"
+            app:layout_constraintStart_toStartOf="@id/product_count_et"
+            app:layout_constraintTop_toBottomOf="@id/product_count_et" />
 
-        <kg.nurtelecom.ofd.sell.CustomCardEditText
-            android:id="@+id/allowance_edit_text"
+        <kg.nurtelecom.ofd.sell.InfoCardCellView
+            android:id="@+id/product_allowance_et"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_weight="1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/count_edit_text" />
+            app:layout_constraintTop_toBottomOf="@id/product_count_et" />
 
     </LinearLayout>
 
@@ -70,11 +69,11 @@
         android:id="@+id/check_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/mask"
-        android:enabled="true"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/colorGreen"
+        android:enabled="true"
         android:text="В ЧЕК"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
